chore: read-only wallet import wording change

--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/ImportWalletOptions.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/ImportWalletOptions.cshtml
@@ -15,7 +15,7 @@
         </div>
         <div class="content">
             <h4>Enter wallet seed</h4>
-            <p class="mb-0 text-secondary">Provide the 12 or 24 word recovery seed</p>
+            <p class="mb-0 text-secondary">Provide the 12 or 24 word mnemonic. BTCPay Server controls funds of this wallet.</p>
         </div>
         <vc:icon symbol="caret-right"/>
     </a>
@@ -45,7 +45,7 @@
         </div>
         <div class="content">
             <h4>Enter core descriptor</h4>
-            <p class="mb-0 text-secondary">Manually enter a core descriptor. Maximum flexibility</p>
+            <p class="mb-0 text-secondary">Provide the core descriptor of your read-only wallet. BTCPay Server can't control funds.</p>
         </div>
         <vc:icon symbol="caret-right"/>
     </a>
