--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/CreateWallet.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/CreateWallet.cshtml
@@ -6,7 +6,8 @@
     Layout = "_LayoutSetup";
 
     var action = Model.IsImport ? "Import" : "Create";
-    ViewData["Title"] = $"{action} {BoltzClient.CurrencyName(Model.Currency!.Value)} Wallet";
+    var actionTitle = Model.ImportMethod == WalletImportMethod.Mnemonic ? action : action + " Readonly ";
+    ViewData["Title"] = $"{actionTitle} {BoltzClient.CurrencyName(Model.Currency!.Value)} Wallet";
 
     var defaultName = Model.Flow switch
     {
@@ -17,7 +18,7 @@
     };
 }
 
-@if (!User.IsInRole(Roles.ServerAdmin))
+@if (!User.IsInRole(Roles.ServerAdmin) && Model.ImportMethod == WalletImportMethod.Mnemonic)
 {
     <div class="alert alert-warning">
         You are not an admin on this server. While you are able to import or generate a wallet via seed with
