--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/ImportWalletOptions.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/ImportWalletOptions.cshtml
@@ -9,13 +9,19 @@
 }
 
 <div class="list-group mt-4">
-    <a asp-controller="Boltz" asp-action="ImportWallet" asp-all-route-data="@Model.GetRouteData("importMethod", WalletImportMethod.Mnemonic)" class="list-group-item list-group-item-action">
+    <a asp-controller="Boltz" asp-action="ImportWallet" asp-all-route-data="@Model.GetRouteData("importMethod", WalletImportMethod.Mnemonic)" class="list-group-item list-group-item-action @(!Model.AllowImportHot ? "disabled" : "")">
         <div class="image">
             <vc:icon symbol="seed"/>
         </div>
         <div class="content">
             <h4>Enter wallet seed</h4>
-            <p class="mb-0 text-secondary">Provide the 12 or 24 word mnemonic. BTCPay Server controls funds of this wallet.</p>
+            <div class="d-flex flex-column gap-2">
+                <p class="mb-0 text-secondary">Provide the 12 or 24 word mnemonic. BTCPay Server controls funds of this wallet.</p>
+                @if (!Model.AllowImportHot)
+                {
+                    <small class="d-block text-danger mt-2 mt-lg-0">Disabled by admin</small>
+                }
+            </div>
         </div>
         <vc:icon symbol="caret-right"/>
     </a>
