--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupWallet.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupWallet.cshtml
@@ -28,7 +28,7 @@
             <div class="list-group">
                 <input asp-for="@Model.WalletName" type="hidden" value="@wallet.Name"/>
                 <button type="submit" class="list-group-item list-group-item-action">
-                    <div class="image">
+                    <div class="image my-auto">
                         <vc:icon symbol="existing-wallet"/>
                     </div>
                     <div class="content">
