chore: experimental warning for rebalance

--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupMode.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupMode.cshtml
@@ -51,6 +51,10 @@ else
                             {
                                 <small class="d-block text-danger mt-2 mt-lg-0">@tooltip</small>
                             }
+                            else
+                            {
+                                <small class="d-block text-warning mt-2 mt-lg-0">Experimental</small>
+                            }
                         </div>
                     </div>
                     <vc:icon symbol="caret-right"/>
