--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupMode.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupMode.cshtml
@@ -64,15 +64,7 @@ else
         @if (!string.IsNullOrEmpty(BoltzService.Daemon.NodeError) && Model.IsAdmin)
         {
             <div class="mt-3">
-                <button class="d-inline-flex align-items-center btn btn-link text-danger fw-semibold p-0" type="button" id="NodeDetailsButton" data-bs-toggle="collapse" data-bs-target="#NodeDetails" aria-expanded="false" aria-controls="NodeDetails">
-                    <vc:icon symbol="caret-down"/>
-                    <span class="ms-1">Error Details</span>
-                </button>
-                <div id="NodeDetails" class="collapse">
-                    <div class="pt-3">
-                        <pre>@BoltzService.Daemon.NodeError</pre>
-                    </div>
-                </div>
+                <a asp-action="Admin" asp-route-storeId="@storeId" class="link-info">Details</a>
             </div>
         }
 
