--- a/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/_LightningRecommendations.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/_LightningRecommendations.cshtml
@@ -1,6 +1,9 @@
 @model Google.Protobuf.Collections.RepeatedField<Autoswaprpc.LightningRecommendation>
 @if (Model.Count > 0)
 {
+    var hasIn = Model.Any(recommendation => recommendation.Thresholds.Inbound > 0);
+    var hasOut = Model.Any(recommendation => recommendation.Thresholds.Outbound > 0);
+
     <table class="table table-hover my-0">
         <thead>
         <tr>
@@ -8,6 +11,24 @@
             <th>Capacity</th>
             <th>Inbound</th>
             <th>Outbound</th>
+            @if (hasIn)
+            {
+                <th>
+                    Inbound Threshold
+                    <small class="text-danger mx-1" data-bs-toggle="tooltip" data-bs-placement="top" title="A reverse swap will be created if the outbound balance exceeds this threshold">
+                        <vc:icon symbol="info"/>
+                    </small>
+                </th>
+            }
+            @if (hasOut)
+            {
+                <th>
+                    Outbound Threshold
+                    <small class="text-danger mx-1" data-bs-toggle="tooltip" data-bs-placement="top" title="A reverse swap will be created if the outbound balance exceeds this threshold">
+                        <vc:icon symbol="info"/>
+                    </small>
+                </th>
+            }
             <th>Amount</th>
             <th class="text-nowrap">Type</th>
             <th>Fee Estimate</th>
@@ -22,12 +43,20 @@
                 <td>@payment.Channel.Capacity</td>
                 <td>@payment.Channel.InboundSat</td>
                 <td>@payment.Channel.OutboundSat</td>
+                @if (hasIn)
+                {
+                    <td>@payment.Thresholds.Inbound</td>
+                }
+                @if (hasOut)
+                {
+                    <td>@payment.Thresholds.Outbound</td>
+                }
                 @if (payment.Swap is not null)
                 {
                     <td>@payment.Swap.Amount</td>
                     <td>@payment.Swap.Type</td>
                     <td>@payment.Swap.FeeEstimate</td>
-                    <td>@payment.Swap.DismissedReasons</td>
+                    <td>@(String.Join(", ", payment.Swap.DismissedReasons))</td>
                 }
                 else
                 {
