feat: improve lightning recommendations ui

--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/Status.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/Status.cshtml
@@ -60,7 +60,15 @@ else
 
                     @if (Model.Recommendations is not null)
                     {
+                        var recommendation = Model.Recommendations.Lightning.FirstOrDefault();
                         <partial name="Boltz/_LightningRecommendations" model="Model.Recommendations.Lightning"></partial>
+                        if (recommendation?.Swap != null)
+                        {
+                            <form method="post">
+                                <input type="hidden" name="lnRecommendation" value="@recommendation"/>
+                                <button type="submit" class="btn btn-primary">Execute</button>
+                            </form>
+                        }
                     }
                     @if (pendingLnSwaps?.Count > 0)
                     {
@@ -105,10 +113,18 @@ else
 
                 var fees = new FeesModel { Pair = new Pair { From = Currency.Lbtc, To = Currency.Btc }, SwapType = SwapType.Chain };
                 var pendingChainSwaps = Model.PendingAutoSwaps?.Where(info => info.Type == SwapType.Chain).ToList();
+                var chainSwap = chainRecommendation.Swap;
 
                 <div class="widget d-flex gap-3 flex-column">
                     <partial name="Boltz/_AutoSwapStatus" model="chain"/>
                     <partial name="Boltz/_ChainRecommendations" model="chainRecommendation"/>
+                    @if (chainSwap is null)
+                    {
+                        <form method="post">
+                            <input type="hidden" name="chainRecommendation" value="@chainRecommendation"/>
+                            <button type="submit" class="btn btn-primary">Execute</button>
+                        </form>
+                    }
                     @if (pendingChainSwaps?.Count > 0)
                     {
                         <div>
