--- a/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/_LightningRecommendations.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/_LightningRecommendations.cshtml
@@ -57,8 +57,14 @@
                              aria-valuemax="100">
                         </div>
 
-                        <div class="progress-bar marker @(outReached ? "bg-danger" : "")" style="left: @outboundThresholdWidth%"></div>
-                        <div class="progress-bar marker @(inReached ? "bg-danger" : "")" style="right: @inboundThresholdWidth%"></div>
+                        @if (thresholds.Outbound > 0)
+                        {
+                            <div class="progress-bar marker @(outReached ? "bg-danger" : "")" style="left: @outboundThresholdWidth%"></div>
+                        }
+                        @if (thresholds.Inbound > 0)
+                        {
+                            <div class="progress-bar marker @(inReached ? "bg-danger" : "")" style="right: @inboundThresholdWidth%"></div>
+                        }
                     </div>
                     <div class="d-flex flex-row justify-content-between">
                         <div class="text-secondary d-flex flex-row align-items-center">
